--- a/assets/html/footer.html
+++ b/assets/html/footer.html
@@ -1,11 +1,11 @@
 <footer class="footer">
     <div class="footer-content">
         <div class="social-links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.facebook.com/sbsanroque" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
             <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
-        <p>&copy; 2024 Gender and Development Profiling System. All rights reserved.</p>
+        <p>&copy; 2024 Sangguniang Barangay San Roque. All rights reserved.</p>
     </div>
 </footer>
