--- a/assets/html/header_front.html
+++ b/assets/html/header_front.html
@@ -3,9 +3,9 @@
         <div class="logo-section">
             <a href="index.php" class="logo-link">
                 <div class="logo">
-                    <i class="fas fa-venus-mars"></i>
+                    <img src="assets/logo/logo.png" alt="Sangguniang Barangay San Roque" width="50" height="50" style="border-radius: 50%; object-fit: cover;">
                 </div>
-                <h1 class="site-title">Gender and Development Profiling System</h1>
+                <h1 class="site-title">Sangguniang Barangay San Roque</h1>
             </a>
         </div>
         <nav class="nav-links">
