--- a/assets/html/icon.html
+++ b/assets/html/icon.html
@@ -1,2 +1,2 @@
-<link rel="icon" href="../assets/icon/GADPS.ico" type="image/x-icon">
-<link rel="icon" href="../assets/icon/GADPS.png" type="image/png">
+<link rel="icon" href="../assets/icon/GADPS.ico" type="image/x-icon" style="border-radius: 50%; width: 50px; height: 50px;">
+<link rel="icon" href="../assets/icon/GADPS.png" type="image/png" style="border-radius: 50%; width: 50px; height: 50px;">
